src/zx81bas/scan.cpp
/* Generated by re2c 3.1 */
//-----------------------------------------------------------------------------
// zx81bas
// Copyright (C) Paulo Custodio, 2023-2026
// License: The Artistic License 2.0, http://www.perlfoundation.org/artistic_license_2_0
//-----------------------------------------------------------------------------

#include "errors.h"
#include "lexer.h"
#include "utils.h"
#include "zx81chars.h"
#include <cctype>
#include <string>
#include <vector>



// Remove underscores
static double parse_float_from_chars(const std::string& s) {
    std::string t;
    t.reserve(s.size());
    for (char c : s) {
        if (c != '_') {
            t.push_back(c);
        }
    }
    return std::stod(t);
}

// Remove underscores
static int parse_int_from_chars(const std::string& s, int base) {
    std::string t;
    t.reserve(s.size());
    for (char c : s) {
        if (c != '_') {
            t.push_back(c);
        }
    }
    return std::stoul(t, nullptr, base);
}

bool tokenize_line(const std::string& text, SourceType source_type,
                   const SourceLoc& loc,
                   std::vector<Token>& tokens) {
    const char* p = text.c_str();
    const char* limit = p + text.size();
    const char* marker = nullptr;

    auto check_trailing_char = [&]() -> bool {
        if (isalnum(*p) || *p == '_') {
            error(loc, "Invalid character '" + std::string(1, *p) + "'");
            return false;
        }
        return true;
    };

    while (*p) {
        Token token;
        token.loc = loc;
collect_token:
        const char* start = p;


        {
            char yych;
            unsigned int yyaccept = 0;
            yych = *p;
            switch (yych) {
            case '\t':
            case '\n':
            case '\v':
            case '\f':
            case '\r':
            case ' ':
                goto yy2;
            case '!':
                goto yy4;
            case '"':
                goto yy6;
            case '#':
                goto yy7;
            case '$':
                goto yy9;
            case '%':
                goto yy11;
            case '&':
                goto yy13;
            case '\'':
                goto yy15;
            case '(':
                goto yy16;
            case ')':
                goto yy17;
            case '*':
                goto yy18;
            case '+':
                goto yy20;
            case ',':
                goto yy21;
            case '-':
                goto yy22;
            case '.':
                goto yy23;
            case '/':
                goto yy25;
            case '0':
                goto yy27;
            case '1':
                goto yy29;
            case '2':
            case '3':
            case '4':
            case '5':
            case '6':
            case '7':
            case '8':
            case '9':
                goto yy31;
            case ':':
                goto yy32;
            case ';':
                goto yy33;
            case '<':
                goto yy34;
            case '=':
                goto yy36;
            case '>':
                goto yy38;
            case '?':
                goto yy40;
            case '@':
                goto yy41;
            case 'A':
            case 'B':
            case 'C':
            case 'D':
            case 'E':
            case 'F':
            case 'G':
            case 'H':
            case 'I':
            case 'J':
            case 'K':
            case 'L':
            case 'M':
            case 'N':
            case 'O':
            case 'P':
            case 'Q':
            case 'R':
            case 'S':
            case 'T':
            case 'U':
            case 'V':
            case 'W':
            case 'X':
            case 'Y':
            case 'Z':
            case '_':
            case 'a':
            case 'b':
            case 'c':
            case 'd':
            case 'e':
            case 'f':
            case 'g':
            case 'h':
            case 'i':
            case 'j':
            case 'k':
            case 'l':
            case 'm':
            case 'n':
            case 'o':
            case 'p':
            case 'q':
            case 'r':
            case 's':
            case 't':
            case 'u':
            case 'v':
            case 'w':
            case 'x':
            case 'y':
            case 'z':
                goto yy43;
            case '[':
                goto yy45;
            case '\\':
                goto yy46;
            case ']':
                goto yy47;
            case '^':
                goto yy48;
            case '{':
                goto yy50;
            case '|':
                goto yy51;
            case '}':
                goto yy53;
            case '~':
                goto yy54;
            default:
                if (limit <= p) {
                    goto yy107;
                }
                goto yy1;
            }
yy1:
            ++p;
            {
                error("Unexpected character: '" + std::string(1, *(p - 1)) + "'");
                break;
            }
yy2:
            yych = *++p;
            switch (yych) {
            case '\t':
            case '\n':
            case '\v':
            case '\f':
            case '\r':
            case ' ':
                goto yy2;
            default:
                goto yy3;
            }
yy3: {
                token.ws_before += std::string(start, p);
                goto collect_token;
            }
yy4:
            yych = *++p;
            switch (yych) {
            case '=':
                goto yy55;
            default:
                goto yy5;
            }
yy5: {
                token.type = TokenType::Exclamation;
                token.text = std::string(start, p);
                goto push_token;
            }
yy6:
            ++p;
            {
                // String literal
                std::vector<uint8_t> bytes;
                if (!encode_zx81_string(p, '"', bytes, loc)) {
                    break;
                }
                p++; // skip closing quote
                token.text = std::string(start, p);
                token.svalue = std::string(start + 1, p - 1);
                token.type = TokenType::StringLiteral;
                goto push_token;
            }
yy7:
            yych = *++p;
            switch (yych) {
            case '#':
                goto yy56;
            default:
                goto yy8;
            }
yy8: {
                token.type = TokenType::Hash;
                token.text = std::string(start, p);
                goto push_token;
            }
yy9:
            yych = *++p;
            switch (yych) {
            case '0':
            case '1':
            case '2':
            case '3':
            case '4':
            case '5':
            case '6':
            case '7':
            case '8':
            case '9':
            case 'A':
            case 'B':
            case 'C':
            case 'D':
            case 'E':
            case 'F':
            case 'a':
            case 'b':
            case 'c':
            case 'd':
            case 'e':
            case 'f':
                goto yy57;
            default:
                goto yy10;
            }
yy10: {
                token.type = TokenType::Dollar;
                token.text = std::string(start, p);
                goto push_token;
            }
yy11:
            yyaccept = 0;
            yych = *(marker = ++p);
            switch (yych) {
            case '"':
                goto yy59;
            case '0':
            case '1':
                goto yy61;
            default:
                goto yy12;
            }
yy12: {
                token.type = TokenType::Percent;
                token.text = std::string(start, p);
                goto push_token;
            }
yy13:
            yych = *++p;
            switch (yych) {
            case '&':
                goto yy63;
            case 'A':
            case 'B':
            case 'C':
            case 'D':
            case 'E':
            case 'F':
            case 'G':
            case 'H':
            case 'I':
            case 'J':
            case 'K':
            case 'L':
            case 'M':
            case 'N':
            case 'O':
            case 'P':
            case 'Q':
            case 'R':
            case 'S':
            case 'T':
            case 'U':
            case 'V':
            case 'W':
            case 'X':
            case 'Y':
            case 'Z':
            case '_':
            case 'a':
            case 'b':
            case 'c':
            case 'd':
            case 'e':
            case 'f':
            case 'g':
            case 'h':
            case 'i':
            case 'j':
            case 'k':
            case 'l':
            case 'm':
            case 'n':
            case 'o':
            case 'p':
            case 'q':
            case 'r':
            case 's':
            case 't':
            case 'u':
            case 'v':
            case 'w':
            case 'x':
            case 'y':
            case 'z':
                goto yy64;
            default:
                goto yy14;
            }
yy14: {
                token.type = TokenType::Ampersand;
                token.text = std::string(start, p);
                goto push_token;
            }
yy15:
            ++p;
            {
                if (source_type == SourceType::BASIC) {
                    break; // ignore the rest of the line
                }
                else {
                    // Char constant
                    std::vector<uint8_t> bytes;
                    if (!encode_zx81_string(p, '\'', bytes, loc)) {
                        break;
                    }
                    p++; // skip closing quote
                    if (bytes.size() != 1) {
                        error(loc, "Char constant must be a single character");
                        break;
                    }
                    token.text = std::string(start, p);
                    token.svalue = std::string(start + 1, p - 1);
                    token.type = TokenType::CharConstant;
                    goto push_token;
                }
            }
yy16:
            ++p;
            {
                token.type = TokenType::LeftParen;
                token.text = std::string(start, p);
                goto push_token;
            }
yy17:
            ++p;
            {
                token.type = TokenType::RightParen;
                token.text = std::string(start, p);
                goto push_token;
            }
yy18:
            yych = *++p;
            switch (yych) {
            case '*':
                goto yy66;
            default:
                goto yy19;
            }
yy19: {
                token.type = TokenType::Multiply;
                token.text = std::string(start, p);
                goto push_token;
            }
yy20:
            ++p;
            {
                token.type = TokenType::Plus;
                token.text = std::string(start, p);
                goto push_token;
            }
yy21:
            ++p;
            {
                token.type = TokenType::Comma;
                token.text = std::string(start, p);
                goto push_token;
            }
yy22:
            ++p;
            {
                token.type = TokenType::Minus;
                token.text = std::string(start, p);
                goto push_token;
            }
yy23:
            yych = *++p;
            switch (yych) {
            case '0':
            case '1':
            case '2':
            case '3':
            case '4':
            case '5':
            case '6':
            case '7':
            case '8':
            case '9':
                goto yy67;
            default:
                goto yy24;
            }
yy24: {
                token.type = TokenType::AsmOperator;
                token.text = std::string(start, p);
                goto push_token;
            }
yy25:
            yych = *++p;
            switch (yych) {
            case '/':
                goto yy70;
            default:
                goto yy26;
            }
yy26: {
                token.type = TokenType::Divide;
                token.text = std::string(start, p);
                goto push_token;
            }
yy27:
            yyaccept = 1;
            yych = *(marker = ++p);
            switch (yych) {
            case 0x00:
                goto yy28;
            case 'B':
            case 'b':
                goto yy73;
            case 'X':
            case 'x':
                goto yy77;
            default:
                goto yy30;
            }
yy28: {
                if (!check_trailing_char()) {
                    break;
                }
                token.type = TokenType::Integer;
                token.text = std::string(start, p);
                token.ivalue = parse_int_from_chars(token.text, 10);
                goto push_token;
            }
yy29:
            yyaccept = 1;
            yych = *(marker = ++p);
yy30:
            switch (yych) {
            case '.':
                goto yy71;
            case '0':
            case '1':
                goto yy29;
            case '2':
            case '3':
            case '4':
            case '5':
            case '6':
            case '7':
            case '8':
            case '9':
                goto yy31;
            case 'A':
            case 'C':
            case 'E':
            case 'F':
            case 'a':
            case 'c':
            case 'e':
            case 'f':
                goto yy72;
            case 'B':
            case 'b':
                goto yy79;
            case 'D':
            case 'd':
                goto yy75;
            case 'H':
            case 'h':
                goto yy76;
            case '_':
                goto yy78;
            default:
                goto yy28;
            }
yy31:
            yyaccept = 1;
            yych = *(marker = ++p);
            switch (yych) {
            case '.':
                goto yy71;
            case '0':
            case '1':
            case '2':
            case '3':
            case '4':
            case '5':
            case '6':
            case '7':
            case '8':
            case '9':
                goto yy31;
            case 'A':
            case 'B':
            case 'C':
            case 'E':
            case 'F':
            case 'a':
            case 'b':
            case 'c':
            case 'e':
            case 'f':
                goto yy72;
            case 'D':
            case 'd':
                goto yy75;
            case 'H':
            case 'h':
                goto yy76;
            case '_':
                goto yy80;
            default:
                goto yy28;
            }
yy32:
            ++p;
            {
                token.type = TokenType::Colon;
                token.text = std::string(start, p);
                goto push_token;
            }
yy33:
            ++p;
            {
                if (source_type == SourceType::BASIC) {
                    token.type = TokenType::Semicolon;
                    token.text = std::string(start, p);
                    goto push_token;
                }
                else {
                    break; // ignore the rest of the line
                }
            }
yy34:
            yych = *++p;
            switch (yych) {
            case '<':
                goto yy81;
            case '=':
                goto yy82;
            case '>':
                goto yy83;
            default:
                goto yy35;
            }
yy35: {
                token.type = TokenType::Less;
                token.text = std::string(start, p);
                goto push_token;
            }
yy36:
            yych = *++p;
            switch (yych) {
            case '=':
                goto yy84;
            default:
                goto yy37;
            }
yy37: {
                token.type = TokenType::Equal;
                token.text = std::string(start, p);
                goto push_token;
            }
yy38:
            yych = *++p;
            switch (yych) {
            case '=':
                goto yy85;
            case '>':
                goto yy86;
            default:
                goto yy39;
            }
yy39: {
                token.type = TokenType::Greater;
                token.text = std::string(start, p);
                goto push_token;
            }
yy40:
            ++p;
            {
                token.type = TokenType::Question;
                token.text = std::string(start, p);
                goto push_token;
            }
yy41:
            yyaccept = 2;
            yych = *(marker = ++p);
            switch (yych) {
            case '"':
                goto yy59;
            case '0':
            case '1':
                goto yy61;
            case 'A':
            case 'B':
            case 'C':
            case 'D':
            case 'E':
            case 'F':
            case 'G':
            case 'H':
            case 'I':
            case 'J':
            case 'K':
            case 'L':
            case 'M':
            case 'N':
            case 'O':
            case 'P':
            case 'Q':
            case 'R':
            case 'S':
            case 'T':
            case 'U':
            case 'V':
            case 'W':
            case 'X':
            case 'Y':
            case 'Z':
            case '_':
            case 'a':
            case 'b':
            case 'c':
            case 'd':
            case 'e':
            case 'f':
            case 'g':
            case 'h':
            case 'i':
            case 'j':
            case 'k':
            case 'l':
            case 'm':
            case 'n':
            case 'o':
            case 'p':
            case 'q':
            case 'r':
            case 's':
            case 't':
            case 'u':
            case 'v':
            case 'w':
            case 'x':
            case 'y':
            case 'z':
                goto yy87;
            default:
                goto yy42;
            }
yy42: {
                token.type = TokenType::At;
                token.text = std::string(start, p);
                goto push_token;
            }
yy43:
            yych = *++p;
            switch (yych) {
            case '0':
            case '1':
            case '2':
            case '3':
            case '4':
            case '5':
            case '6':
            case '7':
            case '8':
            case '9':
            case 'A':
            case 'B':
            case 'C':
            case 'D':
            case 'E':
            case 'F':
            case 'G':
            case 'H':
            case 'I':
            case 'J':
            case 'K':
            case 'L':
            case 'M':
            case 'N':
            case 'O':
            case 'P':
            case 'Q':
            case 'R':
            case 'S':
            case 'T':
            case 'U':
            case 'V':
            case 'W':
            case 'X':
            case 'Y':
            case 'Z':
            case '_':
            case 'a':
            case 'b':
            case 'c':
            case 'd':
            case 'e':
            case 'f':
            case 'g':
            case 'h':
            case 'i':
            case 'j':
            case 'k':
            case 'l':
            case 'm':
            case 'n':
            case 'o':
            case 'p':
            case 'q':
            case 'r':
            case 's':
            case 't':
            case 'u':
            case 'v':
            case 'w':
            case 'x':
            case 'y':
            case 'z':
                goto yy43;
            default:
                goto yy44;
            }
yy44: {
                if (source_type == SourceType::BASIC && *p == '$') {
                    ++p; // include trailing $ in identifier
                }
                token.type = TokenType::Identifier;
                token.text = str_toupper(std::string(start, p));    // BASIC is case insensitive
                token.keyword = lookup_keyword(token.text);
                goto push_token;
            }
yy45:
            ++p;
            {
                token.type = TokenType::AsmOperator;
                token.text = std::string(start, p);
                goto push_token;
            }
yy46:
            ++p;
            {
                token.type = TokenType::IntDivide;
                token.text = std::string(start, p);
                goto push_token;
            }
yy47:
            ++p;
            {
                token.type = TokenType::AsmOperator;
                token.text = std::string(start, p);
                goto push_token;
            }
yy48:
            yych = *++p;
            switch (yych) {
            case '^':
                goto yy89;
            default:
                goto yy49;
            }
yy49: {
                token.type = TokenType::Power;
                token.text = std::string(start, p);
                goto push_token;
            }
yy50:
            ++p;
            {
                token.type = TokenType::AsmOperator;
                token.text = std::string(start, p);
                goto push_token;
            }
yy51:
            yych = *++p;
            switch (yych) {
            case '|':
                goto yy90;
            default:
                goto yy52;
            }
yy52: {
                token.type = TokenType::AsmOperator;
                token.text = std::string(start, p);
                goto push_token;
            }
yy53:
            ++p;
            {
                token.type = TokenType::AsmOperator;
                token.text = std::string(start, p);
                goto push_token;
            }
yy54:
            ++p;
            {
                token.type = TokenType::AsmOperator;
                token.text = std::string(start, p);
                goto push_token;
            }
yy55:
            ++p;
            {
                token.type = TokenType::AsmOperator;
                token.text = std::string(start, p);
                goto push_token;
            }
yy56:
            ++p;
            {
                token.type = TokenType::AsmOperator;
                token.text = std::string(start, p);
                goto push_token;
            }
yy57:
            yyaccept = 3;
            yych = *(marker = ++p);
            switch (yych) {
            case '0':
            case '1':
            case '2':
            case '3':
            case '4':
            case '5':
            case '6':
            case '7':
            case '8':
            case '9':
            case 'A':
            case 'B':
            case 'C':
            case 'D':
            case 'E':
            case 'F':
            case 'a':
            case 'b':
            case 'c':
            case 'd':
            case 'e':
            case 'f':
                goto yy57;
            case '_':
                goto yy91;
            default:
                goto yy58;
            }
yy58: {
                if (!check_trailing_char()) {
                    break;
                }
                token.type = TokenType::Integer;
                token.text = std::string(start, p);
                token.ivalue = parse_int_from_chars(token.text.substr(1), 16);
                goto push_token;
            }
yy59:
            yych = *++p;
            switch (yych) {
            case '"':
                goto yy92;
            case '#':
            case '-':
                goto yy59;
            default:
                goto yy60;
            }
yy60:
            p = marker;
            switch (yyaccept) {
            case 0:
                goto yy12;
            case 1:
                goto yy28;
            case 2:
                goto yy42;
            case 3:
                goto yy58;
            case 4:
                goto yy62;
            case 5:
                goto yy69;
            case 6:
                goto yy74;
            case 7:
                goto yy99;
            default:
                goto yy101;
            }
yy61:
            yyaccept = 4;
            yych = *(marker = ++p);
            switch (yych) {
            case '0':
            case '1':
                goto yy61;
            case '_':
                goto yy93;
            default:
                goto yy62;
            }
yy62: {
                if (!check_trailing_char()) {
                    break;
                }
                token.type = TokenType::Integer;
                token.text = std::string(start, p);
                token.ivalue = parse_int_from_chars(token.text.substr(1), 2);
                goto push_token;
            }
yy63:
            ++p;
            {
                token.type = TokenType::AsmOperator;
                token.text = std::string(start, p);
                goto push_token;
            }
yy64:
            yych = *++p;
            switch (yych) {
            case '0':
            case '1':
            case '2':
            case '3':
            case '4':
            case '5':
            case '6':
            case '7':
            case '8':
            case '9':
            case 'A':
            case 'B':
            case 'C':
            case 'D':
            case 'E':
            case 'F':
            case 'G':
            case 'H':
            case 'I':
            case 'J':
            case 'K':
            case 'L':
            case 'M':
            case 'N':
            case 'O':
            case 'P':
            case 'Q':
            case 'R':
            case 'S':
            case 'T':
            case 'U':
            case 'V':
            case 'W':
            case 'X':
            case 'Y':
            case 'Z':
            case '_':
            case 'a':
            case 'b':
            case 'c':
            case 'd':
            case 'e':
            case 'f':
            case 'g':
            case 'h':
            case 'i':
            case 'j':
            case 'k':
            case 'l':
            case 'm':
            case 'n':
            case 'o':
            case 'p':
            case 'q':
            case 'r':
            case 's':
            case 't':
            case 'u':
            case 'v':
            case 'w':
            case 'x':
            case 'y':
            case 'z':
                goto yy64;
            default:
                goto yy65;
            }
yy65: {
                token.type = TokenType::LabelRefAddr;
                token.text = str_toupper(std::string(start, p));    // BASIC is case insensitive
                token.svalue = str_toupper(std::string(start + 1, p));
                goto push_token;
            }
yy66:
            ++p;
            {
                token.type = TokenType::Power;
                token.text = std::string(start, p);
                goto push_token;
            }
yy67:
            yyaccept = 5;
            yych = *(marker = ++p);
yy68:
            switch (yych) {
            case '0':
            case '1':
            case '2':
            case '3':
            case '4':
            case '5':
            case '6':
            case '7':
            case '8':
            case '9':
                goto yy67;
            case 'E':
            case 'e':
                goto yy94;
            case '_':
                goto yy95;
            default:
                goto yy69;
            }
yy69: {
                if (!check_trailing_char()) {
                    break;
                }
                token.type = TokenType::Float;
                token.text = std::string(start, p);
                token.nvalue = parse_float_from_chars(token.text);
                goto push_token;
            }
yy70:
            ++p;
            {
                break; // ignore the rest of the line
            }
yy71:
            yyaccept = 5;
            yych = *(marker = ++p);
            switch (yych) {
            case 0x00:
            case '_':
                goto yy69;
            default:
                goto yy68;
            }
yy72:
            yych = *++p;
            switch (yych) {
            case '0':
            case '1':
            case '2':
            case '3':
            case '4':
            case '5':
            case '6':
            case '7':
            case '8':
            case '9':
            case 'A':
            case 'B':
            case 'C':
            case 'D':
            case 'E':
            case 'F':
            case 'a':
            case 'b':
            case 'c':
            case 'd':
            case 'e':
            case 'f':
                goto yy72;
            case 'H':
            case 'h':
                goto yy76;
            case '_':
                goto yy96;
            default:
                goto yy60;
            }
yy73:
            yyaccept = 6;
            yych = *(marker = ++p);
            switch (yych) {
            case '0':
            case '1':
            case '2':
            case '3':
            case '4':
            case '5':
            case '6':
            case '7':
            case '8':
            case '9':
            case 'A':
            case 'B':
            case 'C':
            case 'D':
            case 'E':
            case 'F':
            case 'H':
            case 'a':
            case 'b':
            case 'c':
            case 'd':
            case 'e':
            case 'f':
            case 'h':
                goto yy98;
            case '_':
                goto yy96;
            default:
                goto yy74;
            }
yy74: {
                if (!check_trailing_char()) {
                    break;
                }
                token.type = TokenType::Integer;
                token.text = std::string(start, p);
                token.ivalue = parse_int_from_chars(token.text, 2);
                goto push_token;
            }
yy75:
            yyaccept = 1;
            yych = *(marker = ++p);
            switch (yych) {
            case '0':
            case '1':
            case '2':
            case '3':
            case '4':
            case '5':
            case '6':
            case '7':
            case '8':
            case '9':
            case 'A':
            case 'B':
            case 'C':
            case 'D':
            case 'E':
            case 'F':
            case 'a':
            case 'b':
            case 'c':
            case 'd':
            case 'e':
            case 'f':
                goto yy72;
            case 'H':
            case 'h':
                goto yy76;
            case '_':
                goto yy96;
            default:
                goto yy28;
            }
yy76:
            ++p;
            {
                if (!check_trailing_char()) {
                    break;
                }
                token.type = TokenType::Integer;
                token.text = std::string(start, p);
                token.ivalue = parse_int_from_chars(token.text, 16);
                goto push_token;
            }
yy77:
            yych = *++p;
            switch (yych) {
            case '0':
            case '1':
            case '2':
            case '3':
            case '4':
            case '5':
            case '6':
            case '7':
            case '8':
            case '9':
            case 'A':
            case 'B':
            case 'C':
            case 'D':
            case 'E':
            case 'F':
            case 'a':
            case 'b':
            case 'c':
            case 'd':
            case 'e':
            case 'f':
                goto yy100;
            default:
                goto yy60;
            }
yy78:
            yych = *++p;
            switch (yych) {
            case '0':
            case '1':
                goto yy29;
            case '2':
            case '3':
            case '4':
            case '5':
            case '6':
            case '7':
            case '8':
            case '9':
                goto yy31;
            case 'A':
            case 'B':
            case 'C':
            case 'D':
            case 'E':
            case 'F':
            case 'a':
            case 'b':
            case 'c':
            case 'd':
            case 'e':
            case 'f':
                goto yy72;
            case '_':
                goto yy78;
            default:
                goto yy60;
            }
yy79:
            yyaccept = 6;
            yych = *(marker = ++p);
            switch (yych) {
            case '0':
            case '1':
            case '2':
            case '3':
            case '4':
            case '5':
            case '6':
            case '7':
            case '8':
            case '9':
            case 'A':
            case 'B':
            case 'C':
            case 'D':
            case 'E':
            case 'F':
            case 'a':
            case 'b':
            case 'c':
            case 'd':
            case 'e':
            case 'f':
                goto yy72;
            case 'H':
            case 'h':
                goto yy76;
            case '_':
                goto yy96;
            default:
                goto yy74;
            }
yy80:
            yych = *++p;
            switch (yych) {
            case '0':
            case '1':
            case '2':
            case '3':
            case '4':
            case '5':
            case '6':
            case '7':
            case '8':
            case '9':
                goto yy31;
            case 'A':
            case 'B':
            case 'C':
            case 'D':
            case 'E':
            case 'F':
            case 'a':
            case 'b':
            case 'c':
            case 'd':
            case 'e':
